package com.workforce.pipeline.enums;

public class UserRole {
}
