package com.workforce.pipeline.model;

public class Skill {
}
