package com.workforce.pipeline.model;

public class TrainingProgram {
}
