@startuml

'====================================================
' ENUMS
'====================================================
enum UserRole {
  JOB_SEEKER
  EMPLOYER
  TRAINING_PROVIDER
}

'====================================================
' CORE USER SYSTEM
'====================================================
class User {
  +id: int
  +name: String
  +email: String
  +password: String
  +role: UserRole

  +register()
  +login(email: String, password: String)
  +logout()
  +updateProfile(name: String, email: String, password: String)

  +getId(): int
  +setId(id: int): void
  +getName(): String
  +setName(name: String): void
  +getEmail(): String
  +setEmail(email: String): void
  +getPassword(): String
  +setPassword(password: String): void
  +getRole(): UserRole
  +setRole(role: UserRole): void
}

class JobSeeker {
  +resume: String

  +uploadResume(file: String)
  +addSkill(skill: Skill)
  +removeSkill(skill: Skill)
  +viewRecommendedJobs()
  +applyToJob(job: Job)

  +getResume(): String
  +setResume(resume: String): void
}

class Employer {
  +companyName: String

  +postJob(job: Job)
  +updateJob(jobId: int, job: Job)
  +deleteJob(jobId: int)
  +searchCandidates(skill: Skill)
  +viewApplications(jobId: int)

  +getCompanyName(): String
  +setCompanyName(companyName: String): void
}

class TrainingProvider {
  +organizationName: String

  +createProgram(program: TrainingProgram)
  +updateProgram(programId: int, program: TrainingProgram)
  +viewInDemandSkills()
  +contactEmployer(employerId: int, message: String)

  +getOrganizationName(): String
  +setOrganizationName(organizationName: String): void
}

User <|-- JobSeeker
User <|-- Employer
User <|-- TrainingProvider

'====================================================
' ROLE SYSTEM
'====================================================
class Role {
  +id: int
  +title: String
  +industry: String
  +demandScore: double

  '--------------------------------------------
  ' CALCULATION:
  ' demandScore = (number of job postings for this role)
  '               / (total job postings in system)
  '
  ' Example:
  ' Software Engineer = 5000 / 10000 = 0.5
  '--------------------------------------------

  +getId(): int
  +setId(id: int): void
  +getTitle(): String
  +setTitle(title: String): void
  +getIndustry(): String
  +setIndustry(industry: String): void
  +getDemandScore(): double
  +setDemandScore(demandScore: double): void
}

'====================================================
' SKILLS + JOB SYSTEM
'====================================================
class Job {
  +id: int
  +title: String
  +description: String
  +datePosted: Date
  +dataFreshness: String

  +addSkill(skill: Skill)
  +removeSkill(skill: Skill)
  +getRequiredSkills()
  +isActive()

  '--------------------------------------------
  ' DATA FRESHNESS:
  ' Indicates how recent job listing is
  ' Example:
  ' postedDate difference < 7 days = "Fresh"
  ' 7–30 days = "Stale"
  ' >30 days = "Outdated"
  '--------------------------------------------

  +getId(): int
  +setId(id: int): void
  +getTitle(): String
  +setTitle(title: String): void
  +getDescription(): String
  +setDescription(description: String): void
  +getDatePosted(): Date
  +setDatePosted(datePosted: Date): void
  +getDataFreshness(): String
  +setDataFreshness(dataFreshness: String): void
}

class Skill {
  +id: int
  +name: String

  +normalizeSkillName()
  +compareSkills(skill: Skill)
  +getDemandLevel()

  +getId(): int
  +setId(id: int): void
  +getName(): String
  +setName(name: String): void
}

class Application {
  +id: int
  +status: String
  +appliedDate: Date

  +submit(jobSeeker: JobSeeker, job: Job)
  +updateStatus(status: String)
  +getApplicationDetails()

  +getId(): int
  +setId(id: int): void
  +getStatus(): String
  +setStatus(status: String): void
  +getAppliedDate(): Date
  +setAppliedDate(appliedDate: Date): void
}

'====================================================
' JOB RELATIONSHIPS
'====================================================
Job "many" --> "1" Role : belongs to >
Job "1" -- "many" Skill : requires >

JobSeeker "many" -- "many" Skill : has >
Employer "1" -- "many" Job : posts >

JobSeeker "1" -- "many" Application
Job "1" -- "many" Application

'====================================================
' TRAINING SYSTEM
'====================================================
class TrainingProgram {
  +id: int
  +name: String
  +description: String

  +addSkill(skill: Skill)
  +removeSkill(skill: Skill)
  +getSkillsTaught()
  +matchesSkillGap(skills: List<Skill>)

  '--------------------------------------------
  ' SKILL MATCH LOGIC:
  ' matchesSkillGap =
  '   % of missing skills that program teaches
  '
  ' Example:
  ' User missing 3 skills
  ' Program teaches 2 of them
  ' matchScore = 2/3 = 0.66
  '--------------------------------------------

  +getId(): int
  +setId(id: int): void
  +getName(): String
  +setName(name: String): void
  +getDescription(): String
  +setDescription(description: String): void
}

TrainingProvider "1" -- "many" TrainingProgram : creates >
TrainingProgram "many" -- "many" Skill : teaches >

'====================================================
' GAP ANALYSIS SYSTEM
'====================================================
class GapAnalysis {
  +id: int
  +region: String
  +industry: String
  +roleGapScore: double
  +skillGapScore: double

  '--------------------------------------------
  ' ROLE GAP SCORE:
  ' roleGapScore = (job demand - available workers)
  '                / job demand
  '
  ' Example:
  ' 1000 jobs - 600 workers = 0.4 gap
  '
  '--------------------------------------------

  '--------------------------------------------
  ' SKILL GAP SCORE:
  ' skillGapScore = missing skills / required skills
  '
  ' Example:
  ' 3 missing / 5 required = 0.6 gap
  '
  '--------------------------------------------

  +getId(): int
  +setId(id: int): void
  +getRegion(): String
  +setRegion(region: String): void
  +getIndustry(): String
  +setIndustry(industry: String): void
  +getRoleGapScore(): double
  +setRoleGapScore(roleGapScore: double): void
  +getSkillGapScore(): double
  +setSkillGapScore(skillGapScore: double): void
}

'====================================================
' AI RECOMMENDATIONS
'====================================================
class Recommendation {
  +id: int
  +type: String
  +explanation: String

  +generateForJobSeeker(jobSeeker: JobSeeker)
  +matchJobs(skills: List<Skill>)
  +matchTrainingPrograms(skills: List<Skill>)
  +getExplanation()

  '--------------------------------------------
  ' AI OUTPUT LOGIC:
  '
  ' 1. Match user skills → jobs
  ' 2. Identify missing skills
  ' 3. Suggest training programs
  ' 4. Generate explanation:
  '    "You are missing X skill needed for Y role"
  '--------------------------------------------

  +getId(): int
  +setId(id: int): void
  +getType(): String
  +setType(type: String): void
  +getExplanation(): String
  +setExplanation(explanation: String): void
}

JobSeeker "1" -- "many" Recommendation
Recommendation --> Job
Recommendation --> TrainingProgram
Recommendation --> GapAnalysis

'====================================================
' ANALYTICS SYSTEM
'====================================================
class Analytics {

  +generateSkillDemandReport()
  +generateGapAnalysis()
  +getTopSkillsByIndustry(industry: String)
  +visualizeData()

  '--------------------------------------------
  ' ANALYTICS LOGIC:
  '
  ' - Count skill frequency in Job listings
  ' - Aggregate roles by demandScore
  ' - Compare supply vs demand
  '--------------------------------------------

  +generateSkillDemandReport()
  +generateGapAnalysis()
  +getTopSkillsByIndustry(industry: String)
  +visualizeData()
}

Analytics --> Job
Analytics --> Skill
Analytics --> GapAnalysis

@enduml